# profunctoropticssetup

./: Main.hs  README.md  flake.nix  testProfunctors.cabal
